# MeMo

./: .gitignore  Memo-Complete-Breakdown.md  README.md  TESTING_STEP_B.md  TESTING_Step-A.md  pyproject.toml
.claude/: settings.local.json
corpus/: doc1_marchetti.txt  doc2_holbrook.txt
data/: reflection_qa.jsonl
notebooks/: step_b_colab.ipynb  step_c_colab.ipynb
src/memo/: __init__.py  chunking.py  cli.py  llm_clients.py  prompts.py  synthesis.py
src/memo_infer/: __init__.py  cli.py  memory.py  protocol.py
src/memo_train/: __init__.py  cli.py  data.py  model.py  trainer.py
