[project]
name = "memo"
version = "0.2.0"
description = "MEMO: Memory as a Model - Step A (data synthesis) + Step B (memory model SFT)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-genai>=0.3.0",
    "ollama>=0.4.0",
    "tiktoken>=0.7.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.0",
]

# Step B (memory model training) deps are isolated in an optional group so
# Step A users never pay the torch/transformers install cost.
#
# Install locally (CPU torch, fine for smoke tests):
#   uv sync --extra train
#
# Install in Colab (use the pre-installed CUDA torch):
#   pip install -e .[train]
[project.optional-dependencies]
train = [
    "torch>=2.1",
    "transformers>=4.45",
    "accelerate>=0.34",
    "peft>=0.13",
    "datasets>=2.20",
    "safetensors>=0.4",
]
# QLoRA (4-bit) needs bitsandbytes; pulled separately so Step B without QLoRA
# doesn't drag in a binary that's painful to install on some platforms.
qlora = [
    "bitsandbytes>=0.43; platform_system != 'Darwin'",
]

[project.scripts]
memo-step-a = "memo.cli:main"
memo-step-b = "memo_train.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/memo", "src/memo_train"]
